--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 	<script src="js/compSearch.js"></script>
 	<script src="js/compCart.js"></script>
+	<script src="js/compAbout.js"></script>
 
 	<script src="js/app.js"></script>
 </body>
