--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>title</title>
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-5BWR6Q5');</script>
+	<!-- End Google Tag Manager -->
 	<script src="https://unpkg.com/vue@3.2.45/dist/vue.global.prod.js"></script>
 	<script src="https://unpkg.com/vue-router@4/dist/vue-router.global.prod.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -16,6 +26,10 @@
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BWR6Q5" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 	<div id="app">
 		<v-app>
@@ -42,16 +56,20 @@
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/vuetify@3/dist/vuetify.js"></script>
 
-	<script src="data.js"></script>
-	<script src="js/store.js"></script>
-	<script src="js/components.js"></script>
+	<script src="data.js" type="text/javascript"></script>
+	<script src="js/cookie.js" type="text/javascript"></script>
+	<script src="js/postRsvInfo.js" type="text/javascript"></script>
+	<script src="js/store.js" type="text/javascript"></script>
+	<script src="js/components.js" type="text/javascript"></script>
 
-	<script src="js/compSearch.js"></script>
-	<script src="js/compCart.js"></script>
-	<script src="js/compAbout.js"></script>
+	<script src="js/compLanding.js" type="text/javascript"></script>
+	<script src="js/compSearch.js" type="text/javascript"></script>
+	<script src="js/compCart.js" type="text/javascript"></script>
+	<script src="js/compAbout.js" type="text/javascript"></script>
 
-	<script src="js/app.js"></script>
+	<script src="js/app.js" type="text/javascript"></script>
 </body>
+
 
 
 </html>
