--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	<script src="data.js" type="text/javascript"></script>
 	<script src="js/cookie.js" type="text/javascript"></script>
-	<script src="js/postRsvInfo.js" type="text/javascript"></script>
+	<script src="js/postInfo.js" type="text/javascript"></script>
 	<script src="js/store.js" type="text/javascript"></script>
 	<script src="js/components.js" type="text/javascript"></script>
 
