--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
+	<link rel="icon" href="img/SFT_logo.jpg">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/SFT_logo.jpg">
 
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
